Fixed some major plotting issues when you want to do 20 runs

--- a/utils/Plot_Results.ipynb
+++ b/utils/Plot_Results.ipynb
@@ -10,14 +10,14 @@
    "outputs": [
     {
      "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Results/LLM'",
+     "evalue": "[WinError 3] Das System kann den angegebenen Pfad nicht finden: 'Results/LLM'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 181\u001b[0m\n\u001b[1;32m    179\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m directory \u001b[38;5;129;01min\u001b[39;00m directories:\n\u001b[1;32m    180\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m directory \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mResults/LLM\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m--> 181\u001b[0m         unique_sets \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m unique_combinations(directory)\n\u001b[1;32m    182\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    183\u001b[0m         unique_sets \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m unique_combinations_baseline(directory)\n",
-      "Cell \u001b[0;32mIn[1], line 37\u001b[0m, in \u001b[0;36munique_combinations\u001b[0;34m(directory)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21munique_combinations\u001b[39m(directory):\n\u001b[1;32m     36\u001b[0m     unique_lists \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m---> 37\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39mlistdir(directory):\n\u001b[1;32m     38\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(directory, filename)):\n\u001b[1;32m     39\u001b[0m             info \u001b[38;5;241m=\u001b[39m extract_info(filename)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Results/LLM'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 177\u001b[0m\n\u001b[0;32m    175\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m directory \u001b[38;5;129;01min\u001b[39;00m directories:\n\u001b[0;32m    176\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m directory \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mResults/LLM\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m--> 177\u001b[0m         unique_sets \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43munique_combinations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdirectory\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    178\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    179\u001b[0m         unique_sets \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m unique_combinations_baseline(directory)\n",
+      "Cell \u001b[1;32mIn[1], line 39\u001b[0m, in \u001b[0;36munique_combinations\u001b[1;34m(directory)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21munique_combinations\u001b[39m(directory):\n\u001b[0;32m     38\u001b[0m     unique_sets \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdirectory\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m     40\u001b[0m         filepath \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(directory, filename)\n\u001b[0;32m     41\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misfile(filepath):\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] Das System kann den angegebenen Pfad nicht finden: 'Results/LLM'"
      ]
     }
    ],
@@ -50,7 +50,7 @@
     "import re\n",
     "\n",
     "def extract_info(filename):\n",
-    "    pattern = r\"(?P<model>.*?)_(?P<prompt>Context|NoContext)_prompt_experiment_(?P<experiment>\\d+)_temp_(?P<temp>[\\d.]+)_target_(?P<target>[\\d.]+)_.*?_Dev_Budget_(?P<budget>\\d+)_recursive_(?P<recursive>\\d+)_.*?\\.csv\"\n",
+    "    pattern = r\"(?P<model>.*?)_(?P<prompt>Context|NoContext|ZeroContext)_prompt_experiment_(?P<experiment>\\d+)_temp_(?P<temp>[\\d.]+)_target_(?P<target>[\\d.]+)_.*?_Dev_Budget_(?P<budget>\\d+)_recursive_(?P<recursive>\\d+)_.*?\\.csv\"\n",
     "    match = re.match(pattern, filename)\n",
     "    if match:\n",
     "        # Return a tuple as explicitly stated\n",
@@ -105,26 +105,34 @@
     "        split_selected = selected.split(\", \")\n",
     "\n",
     "        # For regular models\n",
-    "        if len(split_selected) == 5 and \"Prompt\" in selected:  # Make sure there are 5 elements\n",
+    "        if len(split_selected) == 6 and \"Prompt\" in selected:  # Make sure there are 5 (6 with budget) elements\n",
     "            selected_model = split_selected[0].split(\": \")[1]\n",
     "            selected_prompt = split_selected[1].split(\": \")[1]\n",
     "            selected_temp = split_selected[2].split(\": \")[1]\n",
     "            selected_target = split_selected[3].split(\": \")[1]\n",
-    "            selected_chain_text = re.split(r\":\\s*\", split_selected[4].strip())[1]\n",
+    "            selected_budget = int(split_selected[4].split(\": \")[1])\n",
+    "            selected_chain_text = re.split(r\":\\s*\", split_selected[5].strip())[1]\n",
     "            selected_chain_numeric = chain_reverse_mapping.get(selected_chain_text, selected_chain_text)  # Map the text to its numeric representation\n",
     "            \n",
     "            \n",
     "            for filename in os.listdir('Results/LLM'):\n",
     "                info = extract_info(filename)\n",
     "                \n",
-    "                if info and info[:-2] == (selected_model, selected_prompt, selected_temp, selected_target) and str(info[-1]) == selected_chain_numeric:\n",
+    "                if info and info[:-1] == (selected_model, selected_prompt, selected_temp, selected_target, selected_budget) and str(info[-1]) == selected_chain_numeric:\n",
     "                    strength = load_data(os.path.join('Results/LLM', filename), info[-2])  # Use the budget\n",
-    "                    data[(selected_model, selected_prompt, selected_temp, selected_target, selected_chain_text)].append(strength)\n",
+    "                    # WHYYY is that here???? data[(selected_model, selected_prompt, selected_temp, selected_target, selected_chain_text)].append(strength)\n",
     "                    # If the condition for TT=3 or TT=5 is met, adjust the strength data\n",
     "                    if selected_chain_text in ['TT=3', 'TT=5']:\n",
     "                        # Ensure the length is at least 14 to safely drop first 4 samples\n",
     "                        if len(strength) >= 14:\n",
     "                            strength = strength[4:14]  # Adjust to keep the 10 relevant samples\n",
+    "                        elif len(strength) == 13:\n",
+    "                            strength = strength[3:13]\n",
+    "                        elif len(strength) == 12:\n",
+    "                            strength = strength[2:12]\n",
+    "                        elif len(strength) == 11:\n",
+    "                            strength = strength[1:11]\n",
+    "                    data[(selected_model, selected_prompt, selected_temp, selected_target, selected_budget, selected_chain_text)].append(strength)\n",
     "\n",
     "        # For baseline models\n",
     "        elif len(split_selected) == 4 and \"Initial Samples\" in selected:\n",
@@ -132,7 +140,7 @@
     "            selected_model = selected_model.split(\": \")[1]\n",
     "            selected_init_samples = selected_init_samples.split(\": \")[1]\n",
     "            selected_target = selected_target.split(\": \")[1]\n",
-    "            selected_budget = selected_budget.split(\": \")[1]\n",
+    "            selected_budget = int(selected_budget.split(\": \")[1])\n",
     "            if selected_model == 'BO':\n",
     "                for directory in ['Results/BO']:\n",
     "                    for filename in os.listdir(directory):\n",
@@ -162,7 +170,7 @@
     "                            pass\n",
     "\n",
     "\n",
-    "    return data\n",
+    "    return data, selected_budget\n",
     "\n",
     "    print(\"Data Loaded Successfully!\")\n",
     "    \n",
@@ -205,9 +213,9 @@
     "unique_list = []\n",
     "for unique_set in unique_sets:\n",
     "    if \"gpt\" in unique_set[0]:  # For regular models\n",
-    "        model, prompt, temp, target, _, prompt_chain = unique_set\n",
+    "        model, prompt, temp, target, budget, prompt_chain = unique_set\n",
     "        chain_desc = \"Zero-Shot\" if prompt_chain == 0 else \"TT=3\" if prompt_chain == 1 else \"TT=5\" if prompt_chain == 2 else \"No Feedback\" if prompt_chain == 3 else prompt_chain\n",
-    "        unique_list.append(f\"Model: {model}, Prompt: {prompt}, Temp: {temp}, Target: {target}, Prompt chain: {chain_desc}\")\n",
+    "        unique_list.append(f\"Model: {model}, Prompt: {prompt}, Temp: {temp}, Target: {target}, Budget: {budget}, Prompt chain: {chain_desc}\")\n",
     "    else:  # For baseline models\n",
     "        model, init_samples, target, budget = unique_set\n",
     "        unique_list.append(f\"Model: {model}, Initial Samples: {init_samples}, Target: {target}, Budget: {budget}\")\n",
@@ -219,7 +227,7 @@
     ")\n",
     "\n",
     "\n",
-    "def plot_results(data, desired_target):\n",
+    "def plot_results(data, budget, desired_target):\n",
     "    \n",
     "    with plot_output:\n",
     "        # Set global font sizes\n",
@@ -233,8 +241,8 @@
     "        # Define the sorting key function\n",
     "        def sorting_key(config):\n",
     "            # Custom order for 'Information Quality'\n",
-    "            info_quality_order = {'NoContext': 0, 'Context': 1}\n",
-    "            if len(config) == 5:  # For chat models with full configuration\n",
+    "            info_quality_order = {'NoContext': 0, 'Context': 1, 'ZeroContext': 2}\n",
+    "            if len(config) == 6:  # For chat models with full configuration\n",
     "                info_quality = config[1]\n",
     "                return (0, info_quality_order.get(info_quality, -1)) + config  # 0 to prioritize chat models\n",
     "            else:  # For baseline methods, give a higher initial sort value\n",
@@ -246,7 +254,7 @@
     "        # Group data by model, strategy, and temperature, handling different config lengths\n",
     "        grouped_data = {}\n",
     "        for config, strengths in sorted_data:\n",
-    "            if len(config) == 5:  # Configs with TT\n",
+    "            if len(config) == 6:  # Configs with TT\n",
     "                group_key = tuple(config[:-1])  # Exclude the TT parameter\n",
     "                # Assign a string based on the value of config[-1]\n",
     "                tt_index = \"Zero-Shot\" if config[-1] == \"0\" else \"TT=3\" if config[-1] == \"1\" else \"TT=5\" if config[-1] == \"2\" else \"No Feedback\" if config[-1] == \"3\" else config[-1]\n",
@@ -302,10 +310,11 @@
     "\n",
     "            # Add labels, title, and legend for each subplot\n",
     "            axs[row, col].set_xlabel('Development Cycle')\n",
-    "            axs[row, 0].set_ylabel('28-Day Compressive Strength - (MPa)')\n",
+    "            axs[row, 0].set_ylabel('Performance')\n",
+    "\n",
     "            # Set title based on the length of config\n",
-    "            if len(config) == 4:  # For chat models with full configuration\n",
-    "                title = f\" {'No Design Context' if {config[1]} == {'NoContext'} else 'Design Context'} \"\n",
+    "            if len(config) == 5:  # For chat models with full configuration\n",
+    "                title = f\" {'Zero Context' if {config[1]} == {'ZeroContext'} else 'Design Context'} \"\n",
     "                \n",
     "                axs[row, col].legend(loc='lower right')\n",
     "            else:  # For baseline methods\n",
@@ -325,7 +334,8 @@
     "            \n",
     "            # Add horizontal line for the desired target strength\n",
     "            axs[row, col].axhline(y=desired_target, color='r', linestyle='--')\n",
-    "            axs[row, col].set_xlim(1, 10)\n",
+    "            \n",
+    "            axs[row, col].set_xlim(1, budget)\n",
     "\n",
     "        # Normalize y-axis for all subplots\n",
     "        for ax in axs.flat:\n",
@@ -335,7 +345,7 @@
     "        plt.show()\n",
     "\n",
     "        \n",
-    "def plot_mean_results(data, desired_target):\n",
+    "def plot_mean_results(data, budget, desired_target):\n",
     "    \n",
     "    with plot_output:\n",
     "        # Set global font sizes\n",
@@ -349,8 +359,8 @@
     "        # Define the sorting key function\n",
     "        def sorting_key(config):\n",
     "            # Custom order for 'Information Quality'\n",
-    "            info_quality_order = {'NoContext': 0, 'Context': 1}\n",
-    "            if len(config) == 5:  # For chat models with full configuration\n",
+    "            info_quality_order = {'NoContext': 0, 'Context': 1, 'ZeroContext': 2}\n",
+    "            if len(config) == 6:  # For chat models with full configuration\n",
     "                info_quality = config[1]\n",
     "                return (0, info_quality_order.get(info_quality, -1)) + config  # 0 to prioritize chat models\n",
     "            else:  # For baseline methods, give a higher initial sort value\n",
@@ -362,7 +372,7 @@
     "        # Group data by model, strategy, and temperature, handling different config lengths\n",
     "        grouped_data = {}\n",
     "        for config, strengths in sorted_data:\n",
-    "            if len(config) == 5:  # Configs with TT\n",
+    "            if len(config) == 6:  # Configs with TT\n",
     "                group_key = tuple(config[:-1])  # Exclude the TT parameter\n",
     "                # Assign a string based on the value of config[-1]\n",
     "                tt_index = \"Zero-Shot\" if config[-1] == \"0\" else \"TT=3\" if config[-1] == \"1\" else \"TT=5\" if config[-1] == \"2\" else \"No Feedback\" if config[-1] == \"3\"  else config[-1]\n",
@@ -417,10 +427,10 @@
     "\n",
     "            # Add labels, title, and legend for each subplot\n",
     "            axs[row, col].set_xlabel('Development Cycle')\n",
-    "            axs[row, 0].set_ylabel('28-Day Compressive Strength - (MPa)')\n",
+    "            axs[row, 0].set_ylabel('Performance')\n",
     "            # Set title based on the length of config\n",
-    "            if len(config) == 4:  # For chat models with full configuration\n",
-    "                title = f\" {'No Design Context' if {config[1]} == {'NoContext'} else 'Design Context'} \"\n",
+    "            if len(config) == 5:  # For chat models with full configuration\n",
+    "                title = f\" {'Zero Context' if {config[1]} == {'ZeroContext'} else 'Design Context'} \"\n",
     "                axs[row, col].legend(loc='lower right')\n",
     "            else:  # For baseline methods\n",
     "                \n",
@@ -439,7 +449,7 @@
     "            \n",
     "            # Add horizontal line for the desired target strength\n",
     "            axs[row, col].axhline(y=desired_target, color='r', linestyle='--')\n",
-    "            axs[row, col].set_xlim(1, 10)\n",
+    "            axs[row, col].set_xlim(1, budget)\n",
     "\n",
     "        # Normalize y-axis for all subplots\n",
     "        for ax in axs.flat:\n",
@@ -467,11 +477,11 @@
     "    # Clear previous plots from the Output widget\n",
     "    plot_output.clear_output(wait=True)\n",
     "\n",
-    "    data = load_selected_data(btn)  # store the returned data in a variable\n",
+    "    data, budget = load_selected_data(btn)  # store the returned data in a variable\n",
     "\n",
     "    # Draw the new plot inside the Output widget\n",
     "    with plot_output:\n",
-    "        plot_results(data, desired_target= 64.86370000000001)\n",
+    "        plot_results(data, budget, desired_target= 64.86370000000001)\n",
     "\n",
     "    # Release the lock\n",
     "    lock.release()\n",
@@ -485,11 +495,11 @@
     "    # Clear previous plots from the Output widget\n",
     "    plot_output.clear_output(wait=True)\n",
     "\n",
-    "    data = load_selected_data(btn)  # store the returned data in a variable\n",
+    "    data, budget = load_selected_data(btn)  # store the returned data in a variable\n",
     "\n",
     "    # Draw the new plot inside the Output widget\n",
     "    with plot_output:\n",
-    "        plot_mean_results(data, desired_target= 64.86370000000001)\n",
+    "        plot_mean_results(data, budget, desired_target= 64.86370000000001)\n",
     "\n",
     "    # Release the lock\n",
     "    lock.release()    \n",
@@ -552,7 +562,6 @@
     "        \n",
     "        configs.append(label)\n",
     "        cum_strengths = [np.maximum.accumulate(strength) for strength in all_strengths]\n",
-    "        #all_strengths = all_strengths\n",
     "        mean_strengths = np.mean(cum_strengths, axis=0)\n",
     "        lower_bound = np.percentile(cum_strengths, 10, axis=0)\n",
     "        indices = [0,1,2,3,4,5,6,7,8,9]\n",
