final changes to zeroprompt

--- a/utils/Plot_Results.ipynb
+++ b/utils/Plot_Results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "16d64e23",
    "metadata": {
     "scrolled": true
@@ -124,14 +124,14 @@
     "                    # If the condition for TT=3 or TT=5 is met, adjust the strength data\n",
     "                    if selected_chain_text in ['TT=3', 'TT=5']:\n",
     "                        # Ensure the length is at least 14 to safely drop first 4 samples\n",
-    "                        if len(strength) >= 14:\n",
-    "                            strength = strength[4:14]  # Adjust to keep the 10 relevant samples\n",
-    "                        elif len(strength) == 13:\n",
-    "                            strength = strength[3:13]\n",
-    "                        elif len(strength) == 12:\n",
-    "                            strength = strength[2:12]\n",
-    "                        elif len(strength) == 11:\n",
-    "                            strength = strength[1:11]\n",
+    "                        if len(strength) >= selected_budget + 4:\n",
+    "                            strength = strength[4:selected_budget+4]  # Adjust to keep the 10 relevant samples\n",
+    "                        elif len(strength) == selected_budget + 3:\n",
+    "                            strength = strength[3:selected_budget+3]\n",
+    "                        elif len(strength) == selected_budget + 2:\n",
+    "                            strength = strength[2:selected_budget+2]\n",
+    "                        elif len(strength) == selected_budget + 1:\n",
+    "                            strength = strength[1:selected_budget+1]\n",
     "                    data[(selected_model, selected_prompt, selected_temp, selected_target, selected_budget, selected_chain_text)].append(strength)\n",
     "\n",
     "        # For baseline models\n",
@@ -336,6 +336,10 @@
     "            axs[row, col].axhline(y=desired_target, color='r', linestyle='--')\n",
     "            \n",
     "            axs[row, col].set_xlim(1, budget)\n",
+    "            axs[row, col].set_xticks(np.arange(1, budget+1))\n",
+    "        \n",
+    "        for idx in range(num_configs, nrows*ncols):\n",
+    "            fig.delaxes(axs.flat[idx])\n",
     "\n",
     "        # Normalize y-axis for all subplots\n",
     "        for ax in axs.flat:\n",
@@ -450,6 +454,10 @@
     "            # Add horizontal line for the desired target strength\n",
     "            axs[row, col].axhline(y=desired_target, color='r', linestyle='--')\n",
     "            axs[row, col].set_xlim(1, budget)\n",
+    "            axs[row, col].set_xticks(np.arange(1, budget+1))\n",
+    "        \n",
+    "        for idx in range(num_configs, nrows*ncols):\n",
+    "            fig.delaxes(axs.flat[idx])\n",
     "\n",
     "        # Normalize y-axis for all subplots\n",
     "        for ax in axs.flat:\n",
