--- a/utils/Run_Experiments.ipynb
+++ b/utils/Run_Experiments.ipynb
@@ -258,7 +258,7 @@
     "                        print(f\"Iteration {iterations}: Assistant's response did not contain a valid solution. Trying again.\")\n",
     "\n",
     "                    if not valid_solution:\n",
-    "                        messages[-1][\"content\"] = iterate_prompt.value + \"\\nRemember the exact parameter grid: A: {360, 370, 380, 390,400, 410, 420, 430, 440, 450}, B: {0.45, 0.5, 0.55, 0.6}, C: {0.7/0.3, 0.6/0.4, 0.5/0.5}, D: {0, 1}. It is extremly important that you stick to these values and reply in the following format: 'The formulation is A = {your estimate}, B = {your estimate}, C = {your estimate}, D = {your estimate}'\"\n",
+    "                        messages[-1][\"content\"] = iterate_prompt.value + \"\\nRemember the exact parameter grid: A: {360, 370, 380, 390,400, 410, 420, 430, 440, 450}, B: {0.45, 0.5, 0.55, 0.6}, C: {0.7/0.3, 0.6/0.4, 0.5/0.5}, D: {0, 1}. It is extremly important that you stick to these values and reply in the following format: 'The formulation is A = {your estimate}, B = {your estimate}, C = {your estimate}, D = {your estimate}\"\n",
     "                else:\n",
     "                    print(f\"Iteration {iterations}: Response not from 'assistant'. Trying again.\")\n",
     "\n",
