Fixed double plot output

--- a/utils/Plot_Results.ipynb
+++ b/utils/Plot_Results.ipynb
@@ -110,6 +110,7 @@
     "            selected_prompt = split_selected[1].split(\": \")[1]\n",
     "            selected_temp = split_selected[2].split(\": \")[1]\n",
     "            selected_target = split_selected[3].split(\": \")[1]\n",
+    "        \n",
     "            selected_budget = int(split_selected[4].split(\": \")[1])\n",
     "            selected_chain_text = re.split(r\":\\s*\", split_selected[5].strip())[1]\n",
     "            selected_chain_numeric = chain_reverse_mapping.get(selected_chain_text, selected_chain_text)  # Map the text to its numeric representation\n",
@@ -124,14 +125,14 @@
     "                    # If the condition for TT=3 or TT=5 is met, adjust the strength data\n",
     "                    if selected_chain_text in ['TT=3', 'TT=5']:\n",
     "                        # Ensure the length is at least 14 to safely drop first 4 samples\n",
-    "                        if len(strength) >= 14:\n",
-    "                            strength = strength[4:14]  # Adjust to keep the 10 relevant samples\n",
-    "                        elif len(strength) == 13:\n",
-    "                            strength = strength[3:13]\n",
-    "                        elif len(strength) == 12:\n",
-    "                            strength = strength[2:12]\n",
-    "                        elif len(strength) == 11:\n",
-    "                            strength = strength[1:11]\n",
+    "                        if len(strength) >= selected_budget + 4:\n",
+    "                            strength = strength[4:selected_budget+4]  # Adjust to keep the 10 relevant samples\n",
+    "                        elif len(strength) == selected_budget + 3:\n",
+    "                            strength = strength[3:selected_budget+3]\n",
+    "                        elif len(strength) == selected_budget + 2:\n",
+    "                            strength = strength[2:selected_budget+2]\n",
+    "                        elif len(strength) == selected_budget + 1:\n",
+    "                            strength = strength[1:selected_budget+1]\n",
     "                    data[(selected_model, selected_prompt, selected_temp, selected_target, selected_budget, selected_chain_text)].append(strength)\n",
     "\n",
     "        # For baseline models\n",
@@ -336,7 +337,8 @@
     "            axs[row, col].axhline(y=desired_target, color='r', linestyle='--')\n",
     "            \n",
     "            axs[row, col].set_xlim(1, budget)\n",
-    "\n",
+    "        for idx in range(num_configs, nrows * ncols):\n",
+    "            fig.delaxes(axs.flat[idx])  # Remove the extra subplot\n",
     "        # Normalize y-axis for all subplots\n",
     "        for ax in axs.flat:\n",
     "            ax.set_ylim([30, 66])\n",
@@ -450,13 +452,15 @@
     "            # Add horizontal line for the desired target strength\n",
     "            axs[row, col].axhline(y=desired_target, color='r', linestyle='--')\n",
     "            axs[row, col].set_xlim(1, budget)\n",
-    "\n",
+    "        for idx in range(num_configs, nrows * ncols):\n",
+    "            fig.delaxes(axs.flat[idx])  # Remove the extra subplot\n",
     "        # Normalize y-axis for all subplots\n",
     "        for ax in axs.flat:\n",
     "            ax.set_ylim([30, 66])\n",
     "\n",
     "        plt.tight_layout()\n",
-    "        plt.show()        \n",
+    "        plt.show();\n",
+    "             \n",
     "        \n",
     "# Example usage\n",
     "# plot_results(data, desired_target)\n",
@@ -509,6 +513,7 @@
     "\n",
     "load_mean_button = widgets.Button(description='Plot Mean Performance')\n",
     "load_mean_button.on_click(on_load_and_plot_mean)\n",
+    "\n",
     "#display(combo_widget, load_button, plot_output)\n",
     "\n",
     "##########################\n",
