--- a/utils/Settings.ipynb
+++ b/utils/Settings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "41fef684",
    "metadata": {},
    "outputs": [
@@ -60,8 +60,8 @@
     "\n",
     "# Create the 'prompt' dropdown menu with options\n",
     "prompt_dropdown = widgets.Dropdown(\n",
-    "    options=['None 0', 'None 1', 'None 2', 'Generic 0','Generic 1','Generic 2', 'Specific 0', 'Specific 1', 'Specific 2', 'zero'],\n",
-    "    value='None 0',\n",
+    "    options=['ternary'],\n",
+    "    value='ternary',\n",
     "    description='Prompt:'\n",
     ")\n",
     "\n",
