--- a/utils/Utilities.ipynb
+++ b/utils/Utilities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c161ee3f",
    "metadata": {
     "scrolled": true
@@ -153,28 +153,8 @@
     "    \"\"\"\n",
     "    return f\"We've achieved a performance of {lab_result['fc_28d_Lab_validation']}. Let's try to do better!\"\n",
     "\n",
-    "def parse_materials(materials_str):\n",
-    "    match = re.search(r'(\\d+)/(\\d+) FA/GGBFS', materials_str)\n",
-    "    if match:\n",
-    "        return int(match.group(1)) / (int(match.group(1)) + int(match.group(2)))\n",
-    "    else:\n",
-    "        return None\n",
-    "    \n",
-    "def parse_curing(materials_str):\n",
-    "    if \"Ambient curing\" in materials_str:\n",
-    "        return \"ambient\"\n",
-    "    elif \"Heat curing\" in materials_str:\n",
-    "        return \"oven\"\n",
-    "    else:\n",
-    "        return None\n",
     "\n",
-    "def load_data(csv_path):\n",
-    "    df = pd.read_csv(csv_path)\n",
-    "    df['FA_GGBFS_ratio'] = df['Materials'].apply(parse_materials)\n",
-    "    df['curing'] = df['Materials'].apply(parse_curing)  # Add this line\n",
-    "    return df\n",
-    "\n",
-    "df = load_data('Data/DiscoveryData_Sample.csv')\n",
+    "df = pd.read_csv('Data/alloys.csv')\n",
     "\n",
     "# Initialize empty DataFrame\n",
     "formulation_df = pd.DataFrame(columns=[\"Formulation\", \"Strength\"])\n",
@@ -183,30 +163,15 @@
     "for idx, row in df.iterrows():\n",
     "    \n",
     "    # Get necessary attributes from row\n",
-    "    powder = row[\"Powderkg\"]\n",
-    "    wc = row[\"WC\"]\n",
-    "    materials = row[\"Materials\"]\n",
+    "    M = row[\"M-site element\"]\n",
+    "    A = row[\"A-site element\"]\n",
+    "    X = row[\"X-site element\"]\n",
     "\n",
-    "    # Extract Fly Ash/GGBFS ratio\n",
-    "    fa_ggbfs = materials.split(\",\")[0].split(\"-\")[1]\n",
-    "    \n",
-    "    # Extract curing method\n",
-    "    curing_method = materials.split(\",\")[-1].strip()\n",
-    "\n",
-    "    # Remove unwanted string from curing method\n",
-    "    curing_method = curing_method.replace(\" (Rao et al. 2018)\", \"\")\n",
-    "    curing_method = curing_method.replace(\" (Rao et al.)\", \"\")\n",
-    "    if curing_method == 'Ambient curing':\n",
-    "        curing_method = 0\n",
-    "    elif curing_method == 'Heat curing':\n",
-    "        curing_method = 1\n",
-    "    else:\n",
-    "        print('Unknown curing method')\n",
     "    # Compressive strength\n",
-    "    strength = row[\"fc_28dGroundTruth\"]\n",
+    "    strength = row[\"G (Shear modulus)\"]\n",
     "    \n",
     "    # Create formulation string in the same format as the model's output\n",
-    "    formulation = f'The combination is A = {powder}, B = {wc}, C = {fa_ggbfs}, D = {curing_method}'\n",
+    "    formulation = f'The formulation is M = {M}, A = {A}, X = {X}'\n",
     "    \n",
     "    # Append the formulation and its respective strength to the new DataFrame\n",
     "    new_row = pd.DataFrame({\"Formulation\": [formulation], \"Strength\": [strength]})\n",
@@ -255,37 +220,9 @@
     "                raise\n",
     "                \n",
     "# Load the text from the file\n",
-    "if  prompt_dropdown.value == 'None 0':\n",
-    "    with open('Prompts/prompts_ID_none 0.txt', 'r') as f:\n",
+    "if  prompt_dropdown.value == 'ternary':\n",
+    "    with open('Prompts/prompts_ID_ternary.txt', 'r') as f:\n",
     "        lines = f.read().splitlines()\n",
-    "elif prompt_dropdown.value == 'Generic 0':\n",
-    "    with open('Prompts/prompts_ID_generic 0.txt', 'r') as f:\n",
-    "        lines = f.read().splitlines()\n",
-    "elif prompt_dropdown.value == 'Specific 0':\n",
-    "    with open('Prompts/prompts_ID_specific 0.txt', 'r') as f:\n",
-    "        lines = f.read().splitlines()\n",
-    "elif  prompt_dropdown.value == 'None 1':\n",
-    "    with open('Prompts/prompts_ID_none 1.txt', 'r') as f:\n",
-    "        lines = f.read().splitlines()\n",
-    "elif prompt_dropdown.value == 'Generic 1':\n",
-    "    with open('Prompts/prompts_ID_generic 1.txt', 'r') as f:\n",
-    "        lines = f.read().splitlines()\n",
-    "elif prompt_dropdown.value == 'Specific 1':\n",
-    "    with open('Prompts/prompts_ID_specific 1.txt', 'r') as f:\n",
-    "        lines = f.read().splitlines()\n",
-    "elif  prompt_dropdown.value == 'None 2':\n",
-    "    with open('Prompts/prompts_ID_none 2.txt', 'r') as f:\n",
-    "        lines = f.read().splitlines()\n",
-    "elif prompt_dropdown.value == 'Generic 2':\n",
-    "    with open('Prompts/prompts_ID_generic 2.txt', 'r') as f:\n",
-    "        lines = f.read().splitlines()\n",
-    "elif prompt_dropdown.value == 'Specific 2':\n",
-    "    with open('Prompts/prompts_ID_specific 2.txt', 'r') as f:\n",
-    "        lines = f.read().splitlines()\n",
-    "elif prompt_dropdown.value == 'zero':\n",
-    "    with open('Prompts/prompts_ID_zero.txt', 'r') as f:\n",
-    "        lines = f.read().splitlines()\n",
-    "  \n",
     "# Store the contents in separate variables\n",
     "#instructions_text = lines[0]\n",
     "DA_role_text = lines[0]\n",
